objects/CRSettings__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>check if this request type includes the Application field</inlineHelpText>
        <label>Includes Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Owner__c</fullName>
        <label>Initial Owner</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_BU_Routing_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs BU Routing Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Display order of the request types in the picklist when creating a new request</inlineHelpText>
        <label>Order</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Confirmed_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this request type requires a Confirmed Date to be entered before taking ownership</inlineHelpText>
        <label>Requires Confirmed Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_SAE_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used in the Complete Request button</description>
        <label>Requires SAE Review</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>